fixes the package list in requirements-rpm.txt for EL7.
Signed-off-by: Zhao Chao <chao.zhao@eayun.com>

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -1,283 +1,247 @@
 @Base
 @Core
-Django-1.3.4-1.el6
-Django14
-docker-io
-GeoIP-1.4.8-1.el6
-MySQL-client-5.5.28-7
-MySQL-client-wsrep
+python-django
+docker
+GeoIP
+mariadb
+mariadb-galera-server
+mariadb-libs
 MySQL-python
-MySQL-server-5.5.28-7
-MySQL-server-wsrep
-MySQL-shared-5.5.28-7
-MySQL-shared-wsrep
 mongodb
 mongodb-server
 monit
-PyYAML-3.10-3.el6
-apr-1.3.9-5.el6
-apr-util-1.3.9-3.el6.1
-apr-util-ldap-1.3.9-3.el6.1
-at-3.1.10-43.el6_2.1
+PyYAML
+apr
+apr-util
+apr-util-ldap
+at
 atop
-authconfig-6.1.12-13.el6
-autoconf-2.63-5.1.el6
-automake-1.11.1-4.el6
-avahi-0.6.25-12.el6
-bc-1.06.95-1.el6
-bfa-firmware
-ql2100-firmware
-ql2200-firmware
-ql23xx-firmware
+authconfig
+autoconf
+automake
+avahi
+bc
 bind-utils
 boost-program-options
 boost-system
 boost-thread
-byacc-1.9.20070509-7.el6
-c-ares19-1.9.1-4.el6.3
+byacc
+c-ares
 centos-release
 ceph
 ceph-deploy
 ceph-radosgw
 ceph-test
-cirros-testvm
-cirros-testvm-mellanox
-cirros-testvmware
 cloud-init
 cloud-utils
-cluster-glue-libs-1.0.11-59.1
-cman
 cobbler
 cobbler-web
 corosync
-cpufreq-init
-crmsh
 cronie
 cronie-anacron
 cronie-noanacron
-crontabs-1.10-33.el6
+crontabs
 curl
 daemonize
-db4-4.7.25-18.el6_4
-db4-cxx-4.7.25-18.el6_4
-db4-utils-4.7.25-18.el6_4
-dbus-python-0.83.0-6.1.el6
+compat-db47
+libdb4-cxx
+libdb4-utils
+dbus-python
 debootstrap
-deltaiso-3.5-0.5.20090913git.el6
-deltarpm-3.5-0.5.20090913git.el6
+deltaiso
+deltarpm
 dhclient
 dhcp
 disktype
-dmidecode-2.11-2.el6
+dmidecode
 dnsmasq
 dnsmasq-utils
-dpkg
-dpkg-devel
 dstat
-ed-1.1-3.3.el6
-erlang-R14B-04.8.el6
-erlang-appmon-R14B-04.8.el6
-erlang-asn1-R14B-04.8.el6
-erlang-common_test-R14B-04.8.el6
-erlang-compiler-R14B-04.8.el6
-erlang-cosEvent-R14B-04.8.el6
-erlang-cosEventDomain-R14B-04.8.el6
-erlang-cosFileTransfer-R14B-04.8.el6
-erlang-cosNotification-R14B-04.8.el6
-erlang-cosProperty-R14B-04.8.el6
-erlang-cosTime-R14B-04.8.el6
-erlang-cosTransactions-R14B-04.8.el6
-erlang-crypto-R14B-04.8.el6
-erlang-debugger-R14B-04.8.el6
-erlang-dialyzer-R14B-04.8.el6
-erlang-diameter-R14B-04.8.el6
-erlang-doc-R14B-04.8.el6
-erlang-docbuilder-R14B-04.8.el6
-erlang-edoc-R14B-04.8.el6
-erlang-erl_docgen-R14B-04.8.el6
-erlang-erl_interface-R14B-04.8.el6
-erlang-erts-R14B-04.8.el6
-erlang-et-R14B-04.8.el6
-erlang-eunit-R14B-04.8.el6
-erlang-examples-R14B-04.8.el6
-erlang-gs-R14B-04.8.el6
-erlang-hipe-R14B-04.8.el6
-erlang-ic-R14B-04.8.el6
-erlang-inets-R14B-04.8.el6
-erlang-inviso-R14B-04.8.el6
-erlang-jinterface-R14B-04.8.el6
-erlang-kernel-R14B-04.8.el6
-erlang-megaco-R14B-04.8.el6
-erlang-mnesia-R14B-04.8.el6
-erlang-observer-R14B-04.8.el6
-erlang-odbc-R14B-04.8.el6
-erlang-orber-R14B-04.8.el6
-erlang-os_mon-R14B-04.8.el6
-erlang-otp_mibs-R14B-04.8.el6
-erlang-parsetools-R14B-04.8.el6
-erlang-percept-R14B-04.8.el6
-erlang-pman-R14B-04.8.el6
-erlang-public_key-R14B-04.8.el6
-erlang-reltool-R14B-04.8.el6
-erlang-runtime_tools-R14B-04.8.el6
-erlang-sasl-R14B-04.8.el6
-erlang-snmp-R14B-04.8.el6
-erlang-ssh-R14B-04.8.el6
-erlang-ssl-R14B-04.8.el6
-erlang-stdlib-R14B-04.8.el6
-erlang-syntax_tools-R14B-04.8.el6
-erlang-test_server-R14B-04.8.el6
-erlang-toolbar-R14B-04.8.el6
-erlang-tools-R14B-04.8.el6
-erlang-tv-R14B-04.8.el6
-erlang-typer-R14B-04.8.el6
-erlang-webtool-R14B-04.8.el6
-erlang-wx-R14B-04.8.el6
-erlang-xmerl-R14B-04.8.el6
-eswitchd
+ed
+erlang
+erlang-appmon
+erlang-asn1
+erlang-common_test
+erlang-compiler
+erlang-cosEvent
+erlang-cosEventDomain
+erlang-cosFileTransfer
+erlang-cosNotification
+erlang-cosProperty
+erlang-cosTime
+erlang-cosTransactions
+erlang-crypto
+erlang-debugger
+erlang-dialyzer
+erlang-diameter
+erlang-doc
+erlang-edoc
+erlang-erl_docgen
+erlang-erl_interface
+erlang-erts
+erlang-et
+erlang-eunit
+erlang-examples
+erlang-gs
+erlang-hipe
+erlang-ic
+erlang-inets
+erlang-jinterface
+erlang-kernel
+erlang-megaco
+erlang-mnesia
+erlang-observer
+erlang-odbc
+erlang-orber
+erlang-os_mon
+erlang-otp_mibs
+erlang-parsetools
+erlang-percept
+erlang-pman
+erlang-public_key
+erlang-reltool
+erlang-runtime_tools
+erlang-sasl
+erlang-snmp
+erlang-ssh
+erlang-ssl
+erlang-stdlib
+erlang-syntax_tools
+erlang-test_server
+erlang-toolbar
+erlang-tools
+erlang-tv
+erlang-typer
+erlang-webtool
+erlang-wx
+erlang-xmerl
 euca2ools
-fcgiwrap-1.0.3-2
 fdupes
-fence-agents
-fencing-agent
-flex-2.5.35-8.el6
+fence-agents-all
+flex
 fuel-utils
-fuse-libs-2.8.3-4.el6
+fuse-libs
 galera
 gcc
 gcc-c++
 gcc-gfortran
-gdisk-0.8.4-1.el6
+gdisk
 git
-gperftools-libs-2.0-11.el6.3
-gpxe-bootimgs
+gperftools-libs
+ipxe-bootimgs
 haproxy
 hdparm
 hiera
 hivex
 htop
-http-parser-2.0-4.20121128gitcd01361.el6
-httpd-2.2.15-15.el6.1
-httpd-tools-2.2.15-15.el6.1
-iperf
+http-parser
+httpd
+httpd-tools
 iperf3
-iproute-2.6.32-130.el6.netns.2.mira1
+iproute
 json-c
-keepalived-1.2.4-1.el6
+keepalived
 kernel
 kernel-devel
-kernel-firmware
 kernel-headers
-kernel-lt
-kernel-lt-devel
-kernel-lt-headers
-leveldb-1.7.0-2.el6
-libaio-0.3.107-10.el6
+leveldb
+libaio
 libcephfs1
-libevent-devel-1.4.13-4.el6
-libfcgi-2.4.0-alt5.2
-libicu-4.2.1-9.1.el6_2
+libevent-devel
+fcgi
+libicu
 libmemcached
 libmlx4
 libmongodb
 libqb
 librados2
 librbd1
-librelp-0.1.1-4.1.el6
-libudev
-libunwind-1.1-2.el6
-libuser-0.56.13-5.el6
-libuv-0.10.4-1.el6
-libuv-devel-0.10.4-1.el6
+librelp
+libunwind
+libuser
+libuv
+libuv-devel
 libxml2
-libyaml-0.1.3-1.el6
+libyaml
 linux-firmware
 lrzip
-lzop-1.02-0.9.rc1.el6
+lzop
 lxc
-mailcap-2.1.31-2.el6
+mailcap
 mailx
-make-3.81-20.el6
-man-1.6f-32.el6
+make
+man-pages
 mcollective
 mcollective-client
 mcollective-common
 mc
-memcached-1.4.4-3.el6
-mlocate-0.22.2-4.el6
-mlnx-ofed-light
-mod_fastcgi
-mod_ssl-2.2.15-15.el6.1
-mod_wsgi-3.2-1.el6
-mtools-4.0.17-3.el6
-murano-api
-murano-dashboard
-murano-apps
-nagios-3.5.0-1.el6
-nagios-common-3.5.0-1.el6
-nagios-plugins-1.4.16-5.el6
-nagios-plugins-apt-1.4.16-5.el6
-nagios-plugins-breeze-1.4.16-5.el6
-nagios-plugins-by_ssh-1.4.16-5.el6
-nagios-plugins-cluster-1.4.16-5.el6
-nagios-plugins-dhcp-1.4.16-5.el6
-nagios-plugins-dig-1.4.16-5.el6
-nagios-plugins-disk-1.4.16-5.el6
-nagios-plugins-disk_smb-1.4.16-5.el6
-nagios-plugins-dns-1.4.16-5.el6
-nagios-plugins-dummy-1.4.16-5.el6
-nagios-plugins-file_age-1.4.16-5.el6
-nagios-plugins-flexlm-1.4.16-5.el6
-nagios-plugins-hpjd-1.4.16-5.el6
-nagios-plugins-http-1.4.16-5.el6
-nagios-plugins-icmp-1.4.16-5.el6
-nagios-plugins-ide_smart-1.4.16-5.el6
-nagios-plugins-ircd-1.4.16-5.el6
-nagios-plugins-ldap-1.4.16-5.el6
-nagios-plugins-linux_raid-1.4.16-5.el6
-nagios-plugins-load-1.4.16-5.el6
-nagios-plugins-log-1.4.16-5.el6
-nagios-plugins-mailq-1.4.16-5.el6
-nagios-plugins-mrtg-1.4.16-5.el6
-nagios-plugins-mrtgtraf-1.4.16-5.el6
-nagios-plugins-mysql-1.4.16-5.el6
-nagios-plugins-nagios-1.4.16-5.el6
-nagios-plugins-nrpe-2.14-3.el6
-nagios-plugins-nt-1.4.16-5.el6
-nagios-plugins-ntp-1.4.16-5.el6
-nagios-plugins-ntp-perl-1.4.16-5.el6
-nagios-plugins-nwstat-1.4.16-5.el6
-nagios-plugins-oracle-1.4.16-5.el6
-nagios-plugins-os-libvirt-1.0.0-2.el6
-nagios-plugins-os-rabbitmq-1.0.0-2.el6
-nagios-plugins-os-swift-1.0.0-1.el6
-nagios-plugins-overcr-1.4.16-5.el6
-nagios-plugins-perl-1.4.16-5.el6
-nagios-plugins-pgsql-1.4.16-5.el6
-nagios-plugins-ping-1.4.16-5.el6
-nagios-plugins-procs-1.4.16-5.el6
-nagios-plugins-real-1.4.16-5.el6
-nagios-plugins-rpc-1.4.16-5.el6
-nagios-plugins-sensors-1.4.16-5.el6
-nagios-plugins-smtp-1.4.16-5.el6
-nagios-plugins-snmp-1.4.16-5.el6
-nagios-plugins-ssh-1.4.16-5.el6
-nagios-plugins-swap-1.4.16-5.el6
-nagios-plugins-tcp-1.4.16-5.el6
-nagios-plugins-time-1.4.16-5.el6
-nagios-plugins-ups-1.4.16-5.el6
-nagios-plugins-users-1.4.16-5.el6
-nagios-plugins-wave-1.4.16-5.el6
-nc
+memcached
+mlocate
+mod_fcgid
+mod_ssl
+mod_wsgi
+mtools
+nagios
+nagios-common
+nagios-plugins
+nagios-plugins-apt
+nagios-plugins-breeze
+nagios-plugins-by_ssh
+nagios-plugins-cluster
+nagios-plugins-dhcp
+nagios-plugins-dig
+nagios-plugins-disk
+nagios-plugins-disk_smb
+nagios-plugins-dns
+nagios-plugins-dummy
+nagios-plugins-file_age
+nagios-plugins-flexlm
+nagios-plugins-hpjd
+nagios-plugins-http
+nagios-plugins-icmp
+nagios-plugins-ide_smart
+nagios-plugins-ircd
+nagios-plugins-ldap
+nagios-plugins-load
+nagios-plugins-log
+nagios-plugins-mailq
+nagios-plugins-mrtg
+nagios-plugins-mrtgtraf
+nagios-plugins-mysql
+nagios-plugins-nagios
+nagios-plugins-nrpe
+nagios-plugins-nt
+nagios-plugins-ntp
+nagios-plugins-ntp-perl
+nagios-plugins-nwstat
+nagios-plugins-oracle
+nagios-plugins-overcr
+nagios-plugins-perl
+nagios-plugins-pgsql
+nagios-plugins-ping
+nagios-plugins-procs
+nagios-plugins-real
+nagios-plugins-rpc
+nagios-plugins-sensors
+nagios-plugins-smtp
+nagios-plugins-snmp
+nagios-plugins-ssh
+nagios-plugins-swap
+nagios-plugins-tcp
+nagios-plugins-time
+nagios-plugins-ups
+nagios-plugins-users
+nagios-plugins-wave
+nmap-ncat
 nfs-utils
-nginx-1.0.15-4.el6
+nginx
 nmap
-nodejs-0.10.4-1.el6
-nodejs-less-1.3.3-3.el6
+nodejs
+nodejs-less
 novnc
-nrpe-2.14-3.el6
+nrpe
 ntp
-numpy-1.4.1-9.el6
+numpy
 openssh-clients
 openssh-server
 openssl-devel
@@ -338,68 +302,63 @@ openstack-swift-proxy
 openstack-utils
 openvswitch
 openpgm
-kmod-openvswitch
 pacemaker
 parted
-passwd-0.77-4.el6_2.2
-patch-2.6-6.el6
-pax-3.4-10.1.el6
-pcapy-0.10.8-2.el6
-percona-toolkit
-perl-DBD-MySQL-4.022-1.el6
-perl-LockFile-Simple-0.207-2.el6
+passwd
+patch
+pax
+pcapy
+perl-DBD-MySQL
+perl-LockFile-Simple
 perl-devel
 policycoreutils
 postgresql
 postgresql-devel
 postgresql-libs
 postgresql-server
-pssh-2.3.1-15.2
+pssh
 pcs
 puppet
 puppet-server
-puppetdb-1.2.0-1.el6
-puppetdb-terminus-1.2.0-1.el6
-puppetlabs-release-6-6
 pushy
-pygobject2-2.20.0-5.el6
+pygobject2
 pyparsing
 pyparsing-doc
-pysendfile-2.0.0-3.el6
-python-actdiag-0.4.3-1
+pysendfile
+python-actdiag
 python-alembic
 python-amqp
-python-amqplib-1.0.2-1.el6
-python-anyjson-0.3.3-2.el6
-python-argparse-1.2.1-2.el6
+python-amqplib
+python-anyjson
+python-argparse
 python-babel
-python-blockdiag-1.2.4-1
+python-blockdiag
 python-ceilometer
 python-ceilometerclient
 python-ceph
-python-cheetah-2.4.1-1.el6
+python-cheetah
 python-cinder
 python-cinderclient
 python-cliff
 python-cliff-tablib
-python-cloudfiles-1.7.9.3-1.el6
+python-cloudfiles
 python-cmd2
 python-crypto
-python-d2to1-0.2.10-1.el6
-python-daemon-1.5.2-1.el6
+python-d2to1
+python-daemon
 python-daemonize
-python-deltarpm-3.5-0.5.20090913git.el6
+python-deltarpm
 python-devel
-python-django-appconf-0.5-3.el6
+python-django-appconf
 python-django-compressor
 python-django-horizon
 python-django-horizon-doc
 python-django-openstack-auth
-python-dmidecode-3.10.13-3.el6_4
+python-dmidecode
 python-ethtool
 python-eventlet
-python-funcparserlib-0.3.5-1
-python-gflags-1.4-3.el6
+python-funcparserlib
+python-gflags
 python-glance
 python-glanceclient
 python-greenlet
@@ -407,8 +366,8 @@ python-greenlet-devel
 python-heatclient
 python-httplib2
 python-imgcreate
-python-importlib-1.0.2-1.el6
-python-ipaddr-2.1.9-1.el6
+python-importlib
+python-ipaddr
 python-iso8601
 python-jsonschema
 python-keyring
@@ -416,12 +375,12 @@ python-keystone
 python-keystoneclient
 python-keystoneclient-doc
 python-kombu
-python-lockfile-0.8-3.el6
-python-markdown-2.0.1-3.1.el6
-python-meld3-0.6.7-1.el6
+python-lockfile
+python-markdown
+python-meld3
 python-migrate
 python-muranoclient
-python-netaddr-0.7.5-4.el6
+python-netaddr
 python-netifaces
 python-neutron
 python-neutronclient
@@ -429,213 +388,207 @@ python-nose-cover3
 python-nova
 python-novaclient
 python-novaclient-doc
-python-nwdiag-0.9.4-1
-python-ordereddict-1.1-2.el6
+python-nwdiag
+python-ordereddict
 python-oslo-config
 python-oslo-config-doc
-python-osnagios-1.1-5.el6
+python-osnagios
 python-paramiko
-python-passlib-1.5.3-1.el6
-python-paste-1.7.5.1-4.20111221hg1498.el6
-python-paste-deploy1.5-1.5.0-5.el6
+python-passlib
+python-paste
+python-paste-deploy1.5
 python-pbr
 python-pip
 python-prettytable
-python-py-1.4.15-1.el6
+python-py
 python-pylibmc
-python-pygments-1.1.1-1.el6
-python-pyudev-0.15-1.el6
-python-qpid-qmf-0.14-14.el6_3
+python-pygments
+python-pyudev
+python-qpid-qmf
 python-rabbit
 python-requests
 python-rhsm
 python-routes
-python-routes1.12-1.12.3-4.el6
 python-saharaclient
-python-seqdiag-0.8.2-1
+python-seqdiag
 python-setuptools
 python-simplejson
 python-six
-python-sphinx10-1.0.8-1.el6
-python-sphinx10-doc-1.0.8-1.el6
+python-sphinx10
+python-sphinx10-doc
 python-sqlalchemy
 python-stevedore
 python-swiftclient
 python-swiftclient-doc
-python-tablib-0.9.11.20120702git752443f-5.el6
-python-unittest2-0.5.1-3.el6
+python-tablib
+python-unittest2
 python-urwid
-python-versiontools-1.9.1-3.el6
-python-virtualenv-1.7.2-1.el6
+python-versiontools
+python-virtualenv
 python-warlock
-python-webcolors-1.4-1
+python-webcolors
 python-webob
 python-websockify
 python-werkzeug
-python-wsgilog-0.3-1
-python-wsgiref-0.1.2-6.el6
+python-wsgilog
+python-wsgiref
 python-zmq
-pyxattr-0.5.0-1.el6
+pyxattr
 qemu
-qpid-cpp-server-ssl-0.14-22.el6_3
-qpid-qmf-0.14-14.el6_3
-qpid-tests-0.14-1.el6_2
-qpid-tools-0.14-6.el6_3
+qpid-cpp-server-ssl
+qpid-qmf
+qpid-tests
+qpid-tools
 rabbitmq-server
 rbd-fuse
-resource-agents-3.9.5-56.1
+resource-agents
 redhat-lsb-core
 rpm-build
-rst2pdf-0.16-1.el6
+rst2pdf
 rsync
 rsyslog
 rsyslog-relp
-ruby-1.8.7.352-13.el6
-ruby-irb-1.8.7.352-13.el6
+ruby
+ruby-irb
 ruby-augeas
 ruby-devel
-ruby-extlib-0.9.13-5.el6
+ruby-extlib
 ruby-libs
-ruby-mysql-2.8.2-1.el6
+ruby-mysql
 ruby-rdoc
 ruby-ri
-ruby-shadow-1.4.1-13.el6
-rubygem-abstract-1.0.0-1.el6
-rubygem-activesupport-3.0.10-1.el6
-rubygem-arel-2.0.10-1.el6
-rubygem-builder-2.1.2-1.el6
-rubygem-bundler-1.3.4-1.el6
-rubygem-bunny-0.8.0-1.el6
-rubygem-cstruct-1.0.1-1.el6
-rubygem-daemons-1.0.10-2.el6
-rubygem-erubis-2.6.6-1.el6
-rubygem-eventmachine-0.12.10-4.el6
-rubygem-eventmachine-doc-0.12.10-4.el6
-rubygem-extlib-0.9.13-5.el6
-rubygem-extlib-doc-0.9.13-5.el6
-rubygem-fastthread-1.0.7-2.el6
-rubygem-gem_plugin-0.2.3-3.el6
-rubygem-highline-1.6.13-1.el6
-rubygem-httpclient-2.3.2-5.el6
-rubygem-httpclient-doc-2.3.2-5.el6
-rubygem-i18n-0.6.4-1.el6
-rubygem-ipaddress-0.8.0-3.el6
-rubygem-ipaddress-doc-0.8.0-3.el6
+ruby-shadow
+rubygem-abstract
+rubygem-activesupport
+rubygem-arel
+rubygem-builder
+rubygem-bundler
+rubygem-bunny
+rubygem-cstruct
+rubygem-daemons
+rubygem-erubis
+rubygem-eventmachine
+rubygem-eventmachine-doc
+rubygem-extlib
+rubygem-extlib-doc
+rubygem-fastthread
+rubygem-gem_plugin
+rubygem-highline
+rubygem-httpclient
+rubygem-httpclient-doc
+rubygem-i18n
+rubygem-ipaddress
+rubygem-ipaddress-doc
 rubygem-json
 rubygem-json-doc
 rubygem-json_pure
 rubygem-json_pure-doc
-rubygem-mail-2.2.19-1.el6
+rubygem-mail
 rubygem-mime-types
-rubygem-mime-types-doc-1.16-mira.5
-rubygem-mixlib-authentication-1.1.4-1.el6
-rubygem-mixlib-cli-1.2.2-3.el6
-rubygem-mixlib-cli-doc-1.2.2-3.el6
-rubygem-mixlib-config-1.1.2-1.el6
-rubygem-mixlib-log-1.4.1-1.el6
-rubygem-mixlib-shellout-1.0.0-1.el6
-rubygem-moneta-0.6.0-1.el6
-rubygem-mongrel-1.1.5-3.el6
+rubygem-mime-types-doc
+rubygem-mixlib-authentication
+rubygem-mixlib-cli
+rubygem-mixlib-cli-doc
+rubygem-mixlib-config
+rubygem-mixlib-log
+rubygem-mixlib-shellout
+rubygem-moneta
+rubygem-mongrel
 rubygem-net-ssh
 rubygem-net-ssh-gateway
-rubygem-net-ssh-multi-1.1-1.el6
-rubygem-netaddr-1.5.0-2.el6
+rubygem-net-ssh-multi
+rubygem-netaddr
 rubygem-openstack
-rubygem-polyglot-0.3.3-1.el6
-rubygem-rack-1.1.0-2.el6
-rubygem-rack-mount-0.6.14-1.el6
-rubygem-rack-test-0.5.7-1.el6
-rubygem-raemon-0.3.0-1.el6
+rubygem-polyglot
+rubygem-rack
+rubygem-rack-mount
+rubygem-rack-test
+rubygem-raemon
 rubygem-rake
-rubygem-rdoc-3.12.2-1.el6
-rubygem-rest-client-1.6.1-2.el6
+rubygem-rdoc
+rubygem-rest-client
 rubygem-stomp
 rubygem-stomp-doc
-rubygem-symboltable-1.0.2-1
-rubygem-systemu-2.5.2-1.el6
-rubygem-thin-1.2.8-4.el6
-rubygem-thin-doc-1.2.8-4.el6
-rubygem-thor-0.14.6-1.el6
-rubygem-treetop-1.4.10-1.el6
-rubygem-tzinfo-0.3.37-1.el6
-rubygem-uuidtools-2.1.2-1.el6
+rubygem-symboltable
+rubygem-systemu
+rubygem-thin
+rubygem-thin-doc
+rubygem-thor
+rubygem-treetop
+rubygem-tzinfo
+rubygem-uuidtools
 rubygem-yajl-ruby
 rubygems
-augeas-libs-1.0.0-5.mira1
-libyaml-0.1.3-1.el6
+augeas-libs
+libyaml
 lldpad
-ruby-2.1.1
-ruby21-nailgun-mcagents
-ruby21-rubygem-json
-ruby21-puppet
-ruby21-rubygem-eventmachine
-ruby21-rubygem-amqp
-ruby21-rubygem-rest-client
-ruby21-rubygem-symboltable
-ruby21-rubygem-open4
-ruby21-rubygem-json_pure
-ruby21-facter
-ruby21-hiera
-ruby21-rubygem-rgen
-ruby21-rubygem-stomp
-ruby21-rubygem-raemon
-ruby21-rubygem-mcollective-client
-ruby21-rubygem-astute
-ruby21-rubygem-openstack
-ruby21-mcollective
-ruby21-rubygem-amq-protocol
-ruby21-rubygem-mime-types
-ruby21-rubygem-i18n
-ruby21-rubygem-activesupport
-ruby21-mcollective-common
-libselinux-ruby-2.0.94
-ruby21-augeas
-ruby21-rubygem-shadow
+ruby
+nailgun-mcagents
+rubygem-json
+rubygem-eventmachine
+rubygem-amqp
+rubygem-rest-client
+rubygem-symboltable
+rubygem-open4
+rubygem-json_pure
+facter
+hiera
+rubygem-rgen
+rubygem-stomp
+rubygem-raemon
+rubygem-mcollective-client
+rubygem-astute
+rubygem-openstack
+rubygem-amq-protocol
+rubygem-mime-types
+rubygem-i18n
+rubygem-activesupport
+libselinux-ruby
+rubygem-shadow
 sahara
-scapy-2.0.0.10-5.el6
-screen-4.0.3-16.el6
+scapy
+screen
 selinux-policy
 selinux-policy-targeted
-send2syslog-0.1-1.el6
-snappy-1.0.5-1.el6
-socat-1.7.2.2-1.el6
-sphinxcontrib-actdiag-0.5.1-3
-sphinxcontrib-blockdiag-1.2.0-3
-sphinxcontrib-nwdiag-0.6.1-3
-sphinxcontrib-seqdiag-0.5.1-3
+send2syslog
+snappy
+socat
+sphinxcontrib-actdiag
+sphinxcontrib-blockdiag
+sphinxcontrib-nwdiag
+sphinxcontrib-seqdiag
 subscription-manager
 supervisor
-syslinux-4.02-8.el6
-system-config-firewall-base-1.2.27-5.el6
+syslinux
+system-config-firewall-base
 sheepdog
-tcpdump-4.0.0-3.20090921gitdf3cb4.2.el6
+tcpdump
 tcptraceroute
-tftp-server-0.49-7.el6
-time-1.7-37.1.el6
+tftp-server
+time
 tinyproxy
 tmux
-unzip-6.0-1.el6
-usermode-1.102-3.el6
+unzip
+usermode
 uwsgi
 uwsgi-plugin-common
 uwsgi-plugin-python
-v8-3.14.5.7-3.el6
-vim-enhanced-7.2.411-1.8.el6
-virt-what-1.11-1.2.el6
+v8
+vim-enhanced
+virt-what
 wget
-whatmask-1.2-7.el6
+whatmask
 wireshark
-wxBase-2.8.12-2.el6
-wxGTK-2.8.12-2.el6
-wxGTK-gl-2.8.12-2.el6
+wxBase
+wxGTK
+wxGTK-gl
 xfsprogs
 xinetd
 percona-xtrabackup
-yum-3.2.29-40.el6.centos
-yum-utils-1.1.30-14.el6
-zeromq
+yum
+yum-utils
 zeromq3
-zlib-devel-1.2.3-29.el6
+zlib-devel
 python-pypcap
 nailgun
 fuel-ostf
@@ -645,14 +598,13 @@ nailgun-agent
 nailgun-mcagents
 nailgun-net-check
 python-fuelclient
-zabbix
-zabbix-agent
-zabbix-sender
-zabbix-server
-zabbix-server-mysql
-zabbix-server-pgsql
-zabbix-web
-zabbix-web-mysql
-zabbix-web-pgsql
+zabbix22
+zabbix22-agent
+zabbix22-server
+zabbix22-server-mysql
+zabbix22-server-pgsql
+zabbix22-web
+zabbix22-web-mysql
+zabbix22-web-pgsql
 rubygem-rethtool
 rubygem-ohai
