--- a/docker/keystone/Dockerfile
+++ b/docker/keystone/Dockerfile
@@ -1,11 +1,11 @@
-FROM fuel/centos
+FROM eayunstack-fuel
 
 MAINTAINER Łukasz Oleś loles@mirantis.com
 
 WORKDIR /root
 
 RUN rm -rf /etc/yum.repos.d/*
-RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
+RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(ip route show to exact 0.0.0.0/0 | awk '{ print $3 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
 RUN yum clean all
 
 ADD etc /etc
