--- a/docker/mcollective/Dockerfile
+++ b/docker/mcollective/Dockerfile
@@ -1,10 +1,10 @@
-FROM fuel/centos
+FROM eayunstack-fuel
 
 MAINTAINER Aleksandr Didenko adidenko@mirantis.com
 
 WORKDIR /root
 
-RUN rm -rf /etc/yum.repos.d/*; echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all; yum --quiet install -y sudo ruby21-mcollective
+RUN rm -rf /etc/yum.repos.d/*; echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(ip route show to exact 0.0.0.0/0 | awk '{ print $3 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all; yum --quiet install -y sudo mcollective
 
 ADD etc /etc
 ADD start.sh /usr/local/bin/start.sh
