--- a/iso/ks.template
+++ b/iso/ks.template
@@ -215,20 +215,6 @@ echo "logvol /var/log --vgname=os --size=4096 --percent 40 --grow --name=varlog 
 # bootloader
 echo "bootloader --location=mbr --driveorder=${tgtdrive} --append=' biosdevname=0 crashkernel=none'" > /tmp/bootloader.ks
 
-# Anaconda can not install grub 0.97 on disks which are >4T.
-# The reason is that grub does not support such large geometries
-# and it simply thinks that the cylinder number has negative value.
-# Here we just set geometry manually so that grub thinks that disk
-# size is equal to 1G.
-# 130 cylinders * (16065 * 512 = 8225280 bytes) = 1G
-echo "%post --nochroot --log=/mnt/sysimage/root/anaconda-post-partition.log" > /tmp/post_partition.ks
-echo "echo \"device (hd0) /dev/${tgtdrive}\" >> /tmp/grub.script" >> /tmp/post_partition.ks
-echo "echo \"geometry (hd0) 130 255 63\" >> /tmp/grub.script" >> /tmp/post_partition.ks
-echo "echo \"root (hd0,2)\" >> /tmp/grub.script" >> /tmp/post_partition.ks
-echo "echo \"install /grub/stage1 (hd0) /grub/stage2 p /grub/grub.conf\" >> /tmp/grub.script" >> /tmp/post_partition.ks
-echo "echo quit >> /tmp/grub.script" >> /tmp/post_partition.ks
-echo "cat /tmp/grub.script | chroot /mnt/sysimage /sbin/grub --no-floppy --batch" >> /tmp/post_partition.ks
-
 %end
 
 %packages --nobase --excludedocs
@@ -240,7 +226,8 @@ crontabs
 curl
 daemonize
 dhcp
-docker-io
+docker
+lxc
 fuelmenu
 gdisk
 lrzip
@@ -252,9 +239,9 @@ ntp
 openssh-clients
 policycoreutils
 rsync
-ruby21-puppet
-ruby21-rubygem-netaddr
-ruby21-rubygem-openstack
+puppet
+rubygem-netaddr
+rubygem-openstack
 selinux-policy-targeted
 strace
 subscription-manager
@@ -266,8 +253,7 @@ vim-enhanced
 virt-what
 wget
 yum
-
-%include /tmp/post_partition.ks
+%end
 
 # POSTINSTALL SECTION
 # HERE ARE COMMANDS THAT WILL BE LAUNCHED JUST AFTER
@@ -280,6 +266,7 @@ mkdir -p /var/log/coredump
 echo -e "kernel.core_pattern=/var/log/coredump/core.%e.%p.%h.%t" >> /etc/sysctl.conf
 chmod 777 /var/log/coredump
 echo -e "* soft core unlimited\n* hard core unlimited" >> /etc/security/limits.conf
+%end
 
 # Mount installation media in chroot
 %post --nochroot --log=/mnt/sysimage/root/anaconda-post-before-chroot.log
@@ -299,9 +286,12 @@ case "${repo}" in
   *)
     if [ -d "/mnt/source" ]; then
       mount -o bind "/mnt/source" "${SOURCE}"
+    elif [ -d "/run/install/repo" ]; then
+      mount -o bind "/run/install/repo" "${SOURCE}"
     fi
   ;;
 esac
+%end
 
 %post --log=/root/anaconda-post-after-chroot.log
 #!/bin/bash
@@ -382,25 +372,16 @@ repodir="${wwwdir}/${OPENSTACK_VERSION}"
 
 # Copying Centos files
 mkdir -p ${repodir}/centos/x86_64
+cp -r ${SOURCE}/EFI ${repodir}/centos/x86_64
 cp -r ${SOURCE}/images ${repodir}/centos/x86_64
 cp -r ${SOURCE}/isolinux ${repodir}/centos/x86_64
+cp -r ${SOURCE}/LiveOS ${repodir}/centos/x86_64
 cp -r ${SOURCE}/repodata ${repodir}/centos/x86_64
 cp -r ${SOURCE}/Packages ${repodir}/centos/x86_64
 cp ${SOURCE}/.treeinfo ${repodir}/centos/x86_64
 
-# Copying Ubuntu files
-mkdir -p ${repodir}/ubuntu/x86_64/images
-cp -r ${SOURCE}/ubuntu/conf ${repodir}/ubuntu/x86_64
-cp -r ${SOURCE}/ubuntu/db ${repodir}/ubuntu/x86_64
-cp -r ${SOURCE}/ubuntu/dists ${repodir}/ubuntu/x86_64
-cp -r ${SOURCE}/ubuntu/indices ${repodir}/ubuntu/x86_64
-cp -r ${SOURCE}/ubuntu/pool ${repodir}/ubuntu/x86_64
-cp -r ${SOURCE}/ubuntu/installer-amd64/current/images/netboot/ubuntu-installer/amd64/linux ${repodir}/ubuntu/x86_64/images
-cp -r ${SOURCE}/ubuntu/installer-amd64/current/images/netboot/ubuntu-installer/amd64/initrd.gz ${repodir}/ubuntu/x86_64/images
-
 # make links for backward compatibility
 ln -s ${repodir}/centos ${wwwdir}/centos
-ln -s ${repodir}/ubuntu ${wwwdir}/ubuntu
 
 # Copying bootstrap image
 mkdir -p ${wwwdir}/bootstrap
