--- a/iso/ks.template
+++ b/iso/ks.template
@@ -7,6 +7,7 @@ keyboard us
 rootpw r00tme
 timezone --utc Etc/UTC
 firewall --disabled
+services --disabled=NetworkManager
 selinux --disabled
 # ignore unsupported hardware warning
 unsupported_hardware
