basic instructions to install eayunstack fuel plugins during fuel master installation.
Signed-off-by: Zhao Chao <zhaochao1984@gmail.com>

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -362,6 +362,10 @@ fi
 
 OPENSTACK_VERSION=`cat ${SOURCE}/openstack_version`
 
+# add EayunStack Fuel Plugins
+mkdir -p /opt/eayunstack
+cp ${SOURCE}/fuel-plugins/*.fp /opt/eayunstack/
+
 # ----------------------
 # UNPACKING REPOSITORIES
 # ----------------------
